Site: Update for 1.1.2 release

--- a/site/output/index.html
+++ b/site/output/index.html
@@ -105,7 +105,7 @@
     <blockquote>
       <h3>What does Deltacloud give you?</h3>
       <ul>
-<li>an opportunity to manage cloud instances the way you want</li>
+        <li>an opportunity to manage cloud instances the way you want</li>
         <li>a way to protect your apps from cloud API changes and incompatitibilities</li>
         <li>three frontends: 'classic' <a href="rest-api.html">Deltacloud</a>, DMTF <a href="cimi-rest.html">CIMI</a>, and EC2</li>
         <li>support for all major <a class="providers" href="drivers.html#drivers" title="Supported providers">cloud service providers</a>
@@ -114,7 +114,8 @@
 </li>
         <li>lets you use your RHEV-M and vSphere installations as a cloud</li>
       </ul>
-<a class="btn btn-large btn-primary" style="float:right" href="about.html">Learn more</a>
+
+      <a class="btn btn-large btn-primary" style="float:right" href="about.html">Learn more</a>
 
     </blockquote>
   </div>
@@ -124,27 +125,31 @@
       <h3>For developers</h3>
       <h6>Deltacloud:</h6>
       <ul>
-<li>is an <b>open source</b> Apache project</li>
+        <li>is an <b>open source</b> Apache project</li>
         <li>is a <a href="rest-api.html" title="API Documentation">REST-based API </a>for simple any-platform access</li>
         <li>is written in Ruby with love</li>
         <li>comes with <a href="usage.html#clients">client libraries</a> for your favourite programming language</li>
       </ul>
-<a class="btn btn-large btn-primary" style="float:right" href="how-to-contribute.html">Contribute</a>
+      <a class="btn btn-large btn-primary" style="float:right" href="how-to-contribute.html">Contribute</a>
 
     </blockquote>
   </div>
   <div class="span3 grad1 about">
     <blockquote>
       <p>
-      <strong>Current release:</strong><br><a class="btn btn-info" href="download.html"><b>deltacloud-core-1.1.1</b></a><br><small>More about <a href="install-deltacloud.html">installation</a>...</small>
+      <strong>Current release:</strong><br>
+      <a class="btn btn-info" href="download.html"><b>deltacloud-core-1.1.2</b></a><br>
+      <small>More about <a href="install-deltacloud.html">installation</a>...</small>
       </p>
-      <br><p>
+      <br>
+      <p>
       <a class="btn btn-danger" href="how-to-contribute.html#bug">Found a bug?</a>
       </p>
     </blockquote>
   </div>
 
 </div>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
