--- a/site/output/running-the-white-box-tests.html
+++ b/site/output/running-the-white-box-tests.html
@@ -98,23 +98,25 @@
       <p><br></p>
 
 <ul class="breadcrumb">
-<li>
+  <li>
     <a href="white-box-tests.html">White Box Tests?</a> <span class="divider">/</span>
   </li>
   <li class="active">Running The White Box Tests</li>
-</ul><h3>Running the white box tests</h3>
+</ul>
+
+<h3>Running the white box tests</h3>
 
 <p>After getting the source and <a href="getting-sources.html"> setting
 up the development environment</a>, the tests can be executed in groups,
 using tasks in the Rakefile, or individually using ruby directly.</p>
 
 <ul>
-<li>
+  <li>
     <p>Examples using rake tasks to executed groups of tests.</p>
   </li>
 
   <ul>
-<li>
+    <li>
       <p>Rake task to run <b><u><i>all</i></u></b> the tests: </p>
       <pre>
       % cd <b>REPO</b>/deltacloud/server
@@ -148,7 +150,8 @@ using tasks in the Rakefile, or individually using ruby directly.</p>
     </li>
 
   </ul>
-<li>
+
+  <li>
     <p>Example manually running an <b><u><i>individual</i></u></b> test: </p>
     <pre>
     % cd <b>REPO</b>/deltacloud/server
@@ -157,6 +160,7 @@ using tasks in the Rakefile, or individually using ruby directly.</p>
   </li>
 
 </ul>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
