--- a/site/output/white-box-tests-layout.html
+++ b/site/output/white-box-tests-layout.html
@@ -98,11 +98,13 @@
       <p><br></p>
 
 <ul class="breadcrumb">
-<li>
+  <li>
     <a href="white-box-tests.html">White Box Tests?</a> <span class="divider">/</span>
   </li>
   <li class="active">White Box Tests Source Description</li>
-</ul><h3>Where Are The White Box Tests:</h3>
+</ul>
+
+<h3>Where Are The White Box Tests:</h3>
 
 <p>The following depicts where in the deltacloud directory source structure the
 white box tests are located:</p>
@@ -228,6 +230,7 @@ This directory provides tests for the CIMI frotend. They make sure that
 JSON/XML serialization of the CIMI models works correctly. Also there are tests
 to make sure the output provided by CIMI collections is correct.
 </p>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
