--- a/site/output/white-box-tests.html
+++ b/site/output/white-box-tests.html
@@ -98,11 +98,13 @@
       <p><br></p>
 
 <ul class="breadcrumb">
-<li>
+  <li>
     <a href="how-to-contribute.html#how">How to contribute?</a> <span class="divider">/</span>
   </li>
   <li class="active">Validate Contributions Using the White Box Tests</li>
-</ul><h3>Validate Contributions Using the White Box Tests</h3>
+</ul>
+
+<h3>Validate Contributions Using the White Box Tests</h3>
 
 <p>
 Deltacloud contains automated API tests, that are driven using pre-recorded
@@ -128,7 +130,7 @@ fixtures without the need to accessess a live cloud provider.
 <h4 id="how">Dealing With the White Box Test</h4>
 
 <ul class="nav nav-list">
-<li class="nav-header">
+  <li class="nav-header">
   </li>
 <li>
     <a href="white-box-tests-layout.html">White Box Tests Source Description</a>
@@ -143,6 +145,8 @@ fixtures without the need to accessess a live cloud provider.
     <a href="update-vcr-test-fixtures-data-example.html">Updating VCR Fixtures Example</a>
   </li>
 </ul>
+
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
