--- a/site/output/drivers.html
+++ b/site/output/drivers.html
@@ -117,17 +117,18 @@ When the Deltacloud server is started it is passed a parameter that specifies th
   <div class="span4">
 
 <ul class="nav nav-list well">
-<li class="nav-header">Drivers</li>
+  <li class="nav-header">Drivers</li>
   <li class="active"><a href="#switch">Dynamic driver switching</a></li>
   <li><a href="#drivers">Driver functionality and credentials</a></li>
   <ul class="nav nav-list">
-<li><a href="#func">Compute driver functionality</a></li>
+    <li><a href="#func">Compute driver functionality</a></li>
     <li><a href="#storage">Storage driver functionality</a></li>
     <li><a href="#credentials">Cloud provider credentials</a></li>
   </ul>
-<li><a href="#notes">Notes on specific drivers</a></li>
+  <li><a href="#notes">Notes on specific drivers</a></li>
 </ul>
-</div>
+
+  </div>
 </div>
 
 <pre>
@@ -150,8 +151,9 @@ The driver and provider can be selected through the request headers <strong> X-D
 
 <h4 id="func">Compute Driver Functionality</h4>
 <table class="table-bordered table-striped table-condensed">
-<thead><tr>
-<th class="emptycell"> </th>
+  <thead>
+    <tr>
+      <th class="emptycell"> </th>
       <th>
         Create new instances
       </th>
@@ -179,10 +181,11 @@ The driver and provider can be selected through the request headers <strong> X-D
       <th>
         List all/get details about instances
       </th>
-    </tr></thead>
-<tbody>
-<tr>
-<td class="provider">
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="provider">
         <strong>Amazon EC2</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -196,8 +199,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Eucalyptus</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -210,8 +213,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Fujitsu FGCP</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -224,8 +227,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>IBM SmartCloud</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -238,8 +241,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>GoGrid</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -252,8 +255,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>OpenNebula</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -266,8 +269,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Rackspace</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -280,8 +283,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>RHEV-M</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -294,8 +297,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>RimuHosting</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -308,8 +311,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Terremark</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -322,8 +325,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>vSphere</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -336,8 +339,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>OpenStack</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -350,8 +353,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Arubacloud</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -364,8 +367,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>DigitalOcean</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -378,13 +381,16 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-</tbody>
-</table><p><br></p>
+  </tbody>
+</table>
+
+<p><br></p>
 
 <h4 id="storage">Storage Driver Functionality</h4>
 <table class="table-bordered table-striped table-condensed">
-<thead><tr>
-<th class="emptycell"> </th>
+  <thead>
+    <tr>
+      <th class="emptycell"> </th>
       <th>
         Create new buckets
       </th>
@@ -403,10 +409,11 @@ The driver and provider can be selected through the request headers <strong> X-D
       <th>
         Read/write individual blob attributes
       </th>
-    </tr></thead>
-<tbody>
-<tr>
-<td class="provider">
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="provider">
         <strong>Amazon S3</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -416,8 +423,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Eucalyptus Walrus</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -427,8 +434,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Rackspace CloudFiles</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -438,8 +445,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Microsoft Azure</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -449,8 +456,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Google Storage</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -460,8 +467,8 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-<tr>
-<td class="provider">
+    <tr>
+      <td class="provider">
         <strong>Openstack object-store (swift)</strong>
       </td>
       <td style="text-align:center">yes</td>
@@ -471,8 +478,9 @@ The driver and provider can be selected through the request headers <strong> X-D
       <td style="text-align:center">yes</td>
       <td style="text-align:center">yes</td>
     </tr>
-</tbody>
-</table><p><br></p>
+  </tbody>
+</table>
+<p><br></p>
 <p>
 Deltacloud uses basic HTTP <a href="rest-api.html#auth">authentication</a> to receive credentials from the client and passes them through to the particular back-end cloud. The credentials always consist of a username and password and they are never stored on the server. The exact credentials for logging into the server, and a place where you can find them, depends on the backend cloud that the server is talking to.
 </p>
@@ -484,18 +492,22 @@ The following table gives details about the credentials that must be provided fo
 <style>
  table { table-layout: fixed; }
  table th, table td { overflow: hidden; }
-</style><h4 id="credentials">Cloud provider credentials</h4>
+</style>
+
+<h4 id="credentials">Cloud provider credentials</h4>
 <table class="table-bordered table-striped table-condensed">
-<thead><tr>
-<th style="width:15%">Cloud</th>
+  <thead>
+    <tr>
+      <th style="width:15%">Cloud</th>
       <th style="width:8%">Driver</th>
       <th style="width:20%">Username</th>
       <th style="width:10%">Password</th>
       <th style="width:47%">Notes</th>
-    </tr></thead>
-<tbody>
-<tr>
-<td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
         <strong>mock</strong>
       </td>
       <td>mock</td>
@@ -503,8 +515,8 @@ The following table gives details about the credentials that must be provided fo
       <td>mockpassword</td>
       <td>The mock driver does not communicate with any cloud; it just pretends to be a cloud.</td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>Amazon EC2/S3</strong>
       </td>
       <td>ec2</td>
@@ -512,8 +524,8 @@ The following table gives details about the credentials that must be provided fo
       <td>Secret Access Key</td>
       <td>Retrieve neccessary information from the <a href="http://aws-portal.amazon.com/gp/aws/developer/account/index.html?action=access-key">Security Credentials</a> page in your AWS account.</td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>Eucalyptus</strong>
       </td>
       <td>eucalyptus</td>
@@ -521,8 +533,8 @@ The following table gives details about the credentials that must be provided fo
       <td>Secret Access Key</td>
       <td></td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>Fujitsu FGCP</strong>
       </td>
       <td>fgcp</td>
@@ -536,8 +548,8 @@ The following table gives details about the credentials that must be provided fo
           in Windows. Then use Username to authenticate.
       </td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>GoGrid</strong>
       </td>
       <td>gogrid</td>
@@ -547,8 +559,8 @@ The following table gives details about the credentials that must be provided fo
       Go to <span style="font-size:small">My Account &gt; API Keys</span> for <a href="https://my.gogrid.com/gogrid/com.servepath.gogrid.GoGrid/index.html">your account</a> and click on the key you want to use to find the Shared Secret.
       </td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>IBM SmartCloud</strong>
       </td>
       <td>sbc</td>
@@ -556,8 +568,8 @@ The following table gives details about the credentials that must be provided fo
       <td>Password</td>
       <td></td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>Microsoft Azure (Storage Account only)</strong>
       </td>
       <td>azure</td>
@@ -567,8 +579,8 @@ The following table gives details about the credentials that must be provided fo
       The Storage Account Name is chosen when you create the service (e.g. name in <a href="http://name.blob.core.windows.net/">name.blob.core.windows.net</a>). The name and the access key are available from the service control panel.
       </td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>OpenNebula</strong>
       </td>
       <td>opennebula</td>
@@ -576,8 +588,8 @@ The following table gives details about the credentials that must be provided fo
       <td>OpenNebula password</td>
       <td>Set the environment variable OCCI_URL to the address on which OpenNebula's OCCI server is listening.</td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>OpenStack</strong>
       </td>
       <td>openstack</td>
@@ -585,8 +597,8 @@ The following table gives details about the credentials that must be provided fo
       <td>The username is OpenStack user name and tenant_name concatenated with a '+' and password is your openstack service password.</td>
       <td>Set the environment variable API_PROVIDER to the URL of Keystone Identity service. Alternatively use the '-P' option when starting the Deltacloud server. See <a href="drivers.html#open">notes</a> for more info.</td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>Rackspace Cloud Servers/Cloud Files</strong>
       </td>
       <td>rackspace</td>
@@ -594,8 +606,8 @@ The following table gives details about the credentials that must be provided fo
       <td>API Key</td>
       <td>Obtain the key from the <a href="https://manage.rackspacecloud.com/APIAccess.do">API Access</a> page in your control panel.</td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>RHEV-M</strong>
       </td>
       <td>rhevm</td>
@@ -605,8 +617,8 @@ The following table gives details about the credentials that must be provided fo
       <td>RHEV-M password</td>
       <td>Set the environment variable API_PROVIDER to the URL of the RHEV-M REST API endpoint. </td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>Rimuhosting</strong>
       </td>
       <td>rimuhosting</td>
@@ -614,8 +626,8 @@ The following table gives details about the credentials that must be provided fo
       <td>API Key</td>
       <td></td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>Terremark</strong>
       </td>
       <td>terremark</td>
@@ -623,8 +635,8 @@ The following table gives details about the credentials that must be provided fo
       <td>Password</td>
       <td></td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>VMware vSphere</strong>
       </td>
       <td>vsphere</td>
@@ -632,8 +644,8 @@ The following table gives details about the credentials that must be provided fo
       <td>vSphere user password</td>
       <td>Set the environment variable API_PROVIDER to the hostname of the vSphere server and the Datastore.</td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>Arubacloud</strong>
       </td>
       <td>arubacloud</td>
@@ -641,8 +653,8 @@ The following table gives details about the credentials that must be provided fo
       <td>Password</td>
       <td></td>
     </tr>
-<tr>
-<td>
+    <tr>
+      <td>
         <strong>DigitalOcean</strong>
       </td>
       <td>digitalocean</td>
@@ -650,8 +662,10 @@ The following table gives details about the credentials that must be provided fo
       <td>API Key</td>
       <td>Obtain these credentials from the <a href="https://www.digitalocean.com/api_access">API access</a> page of your digitalocean account.</td>
     </tr>
-</tbody>
-</table><p><br></p>
+  </tbody>
+</table>
+
+<p><br></p>
 
 <h3 id="notes">Notes on specific drivers</h3>
 
@@ -747,11 +761,12 @@ The OpenNebula driver has been updated to support v3.x of the OpenNebula API. Th
       FGCP virtual systems and networks are both mapped to realms:
       </p>
 <ul>
-<li>Creating a firewall is equivalent to creating a FGCP virtual system. Specify a system descriptor ID as firewall description (e.g. "1-tier Skeleton").</li>
+      <li>Creating a firewall is equivalent to creating a FGCP virtual system. Specify a system descriptor ID as firewall description (e.g. "1-tier Skeleton").</li>
       <li>Destroying a firewall destroys the virtual system. All instances in it need to be in the STOPPED state. This operation first stops the firewall and therefore it can take five minutes until the firewall actually disappears.</li>
       <li>When creating an instance, specify a network segment realm as target location.</li>
       </ul>
-</div>
+      
+      </div>
     </div>
   </div>
   <div class="accordion-group">
@@ -851,6 +866,7 @@ The username and password in 401 challenge should be the same as you use in the 
     </div>
   </div>
 </div>
+
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
