--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -106,89 +106,82 @@
   </li>
   <li>The <a href="http://webchat.freenode.net/">#deltacloud</a> irc channel on Freenode is a place where the developers hang out and where you can usually get the fastest answers to your questions.
   </li>
-</ul>
+</ul><p>Please don't hesitate to get in touch if you have any questions about the project, if you've had any issues with installing or using Deltacloud or even just to tell us how great you think Deltacloud is!</p>
 
-<p>Please don't hesitate to get in touch if you have any questions about the project, if you've had any issues with installing or using Deltacloud or even just to tell us how great you think Deltacloud is!</p>
-
-<hr>
-
-<h2>Deltacloud Community Calls</h2>
+<hr><h2>Deltacloud Community Calls</h2>
 
 <p>We have weekly community calls that are open to anyone that is interested in Deltacloud - please contact us if you’d like to join the next call.</p>
 
-<p>For now we’re using an <a href="http://openetherpad.org/DeltacloudCall">etherpad</a> to keep track of the agenda and meeting times. Feel free to add items there that you’d like to see addressed in future calls. Calls and agenda are announced on the  <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">dev@deltacloud.apache.org</a> mailing list.</p>
+<p>For now we’re using an <a href="http://etherpad.deltacloud.org/p/Weekly">etherpad</a> to keep track of the agenda and meeting times. Feel free to add items there that you’d like to see addressed in future calls. Calls and agenda are announced on the  <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">dev@deltacloud.apache.org</a> mailing list.</p>
 
 <p><br></p>
 
 <h3>Past Calls:</h3>
 
-<p><br>
-<a href="http://youtu.be/89bu_Rf_t9Y">Deltacloud Community Call #14</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=_2j6v4qwfzM">Deltacloud Community Call #16</a></p>
+
+<ul>
+<li>Released 1.1.2</li>
+<li>A high level overview of: "Complete rewrite of deltacloud-client"</li>
+</ul><p><br><a href="http://youtu.be/e6AAJXSxR1U">Deltacloud Community Call #15</a></p>
+
+<ul>
+<li>Awesome features of the new deltacloud-client</li>
+<li>Deltacloud upstream contributions showcase</li>
+<li>Validate Contributions Using the White Box Tests</li>
+</ul><p><br><a href="http://youtu.be/89bu_Rf_t9Y">Deltacloud Community Call #14</a></p>
 
 <p>Using the Create models in CIMI, Split CIMI models to Model/Service, deltacloud-client revamp <br>
-Notes@http://openetherpad.org/DeltacloudCall</p>
+Notes@<a href="http://etherpad.deltacloud.org/p/Weekly">http://etherpad.deltacloud.org/p/Weekly</a></p>
 
-<p><br>
-<a href="http://youtu.be/74KvoLUOmYw">Deltacloud Community Call #13</a></p>
+<p><br><a href="http://youtu.be/74KvoLUOmYw">Deltacloud Community Call #13</a></p>
 
 <p>Regions support in the Deltacloud Openstack driver.</p>
 
-<p><br>
-<a href="http://youtu.be/zTCGRDO_3dU">Deltacloud Community Call #12</a></p>
+<p><br><a href="http://youtu.be/zTCGRDO_3dU">Deltacloud Community Call #12</a></p>
 
 <p>Working with patches revisited - basics of rebasing and how to contribute via patch review.
 The ‘white box’ unit tests revisited - updating vcr fixtures</p>
 
-<p><br>
-<a href="http://youtu.be/HQ5aPdRSLHo">Deltacloud Community Call #11</a></p>
+<p><br><a href="http://youtu.be/HQ5aPdRSLHo">Deltacloud Community Call #11</a></p>
 
 <p>An introduction/overview of sinatra-rabbit</p>
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=HzRbBA8BJ-Q">Deltacloud Community Call #10</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=HzRbBA8BJ-Q">Deltacloud Community Call #10</a></p>
 
 <p>How to use Deltacloud driver “features”</p>
 
-<p><br>
-<a href="http://youtu.be/XWSG2knVvZI">Deltacloud Community Call #9</a></p>
+<p><br><a href="http://youtu.be/XWSG2knVvZI">Deltacloud Community Call #9</a></p>
 
 <p>Demo of how to use CIMI $select and $expand parameters - Introduction/overview of a deltacloud driver</p>
 
-<p><br>
-<a href="http://youtu.be/KvN0xEVc_N0">Deltacloud Community Call #8</a></p>
+<p><br><a href="http://youtu.be/KvN0xEVc_N0">Deltacloud Community Call #8</a></p>
 
 <p>Deep dive into a Deltacloud API call, a look at the Deltacloud server gemspec - gems used as clients to cloud providers</p>
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=YbAsWrj6UEY">Deltacloud Community Call #7</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=YbAsWrj6UEY">Deltacloud Community Call #7</a></p>
 
 <p>The Deltacloud website - how it works, how to submit changes etc  -  Deltacloud exceptions and error handling introduction, how to catch provider errors and raise specific HTTP response codes.</p>
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=oP__wuCqFxQ">Deltacloud Community Call #5</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=oP__wuCqFxQ">Deltacloud Community Call #5</a></p>
 
 <p>How to file bug reports for Deltacloud - process, what to report, following up and CIMI resourceMetadata (implementation, why it is important?) - testing scenarios.</p>
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=TGYTrVRxcGE">Deltacloud Community Call #4</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=TGYTrVRxcGE">Deltacloud Community Call #4</a></p>
 
 <p>Debugging deltacloud - how to chase a bug - common steps, debugging tools. Mailing list questions: i) ovirt and the User Level API, ii) Plans for CIMI back-end driver?</p>
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=YOMK8jrhGoo">Deltacloud Community Call #3</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=YOMK8jrhGoo">Deltacloud Community Call #3</a></p>
 
 <p>Adding state to Deltacloud for the CIMI frontend - Datamapper</p>
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=CMf73mtsIfs">Deltacloud Community Call #2</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=CMf73mtsIfs">Deltacloud Community Call #2</a></p>
 
 <p>Networking API discussion, Writing Deltacloud API tests</p>
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=cUC96SdQjaE">Deltacloud Community Call #1</a></p>
+<p><br><a href="http://www.youtube.com/watch?v=cUC96SdQjaE">Deltacloud Community Call #1</a></p>
 
 <p>Working with Deltacloud API clients, Contributing patches, review process, etc</p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
