--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -123,6 +123,15 @@
 <h3>Past Calls:</h3>
 
 <p><br>
+<a href="http://youtu.be/NHUS-mzkd00">Deltacloud Community Call #18</a></p>
+
+<ul>
+<li>New github pull request model - discussion</li>
+<li>Upcoming release 1.1.3</li>
+<li>Question - how to contribute to the appoxy/aws rubygem (used by Deltacloud EC2 driver)</li>
+</ul>
+
+<p><br>
 <a href="http://youtu.be/upKJM-eYeqw">Deltacloud Community Call #17</a></p>
 
 <ul>
