Site - update links for community call #20

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -123,7 +123,27 @@
 <h3>Past Calls:</h3>
 
 <p><br>
-<a href="http://youtu.be/A2qOr16GZ30">Deltacloud Community Call #19</a></p>
+<a href="http://youtu.be/cPnAiFc4wh4">Deltacloud Community Call #20</a></p>
+
+<ul>
+<li>Guidelines on how to review someone else's patch: what's enough to warrant an ACK? discussion</li>
+    <ul>
+      <li><a href="https://cwiki.apache.org/confluence/display/DTACLOUD/Deltacloud+API+code+style+guidelines">some older style guide</a></li>
+      <li>Action Item: update website - do we need to have discussion?</li>
+    </ul>
+    <li>Questions on the cimi tests - on mailing list (discussion/answers)</li>
+    <li>Questions - dependencies for debian squeeze - ubuntu - <distro> - website docs
+    <ul>
+      <li>install script?(bootstrap - michal) </li>
+      <li> <a href="https://github.com/deltacloud/dev-tools">an older version of a 'boostrap' script - needs tlc</a>
+</li>
+    </ul>
+    <li>renaming deltacloud repo on github from 'deltacloud/core' to 'detacloud/deltacloud-core'</li>
+    <li>NEWS: 1.1.3 release is out - https://github.com/deltacloud/core/blob/master/NEWS</li>
+
+
+<br>
+<a href="http://youtu.be/A2qOr16GZ30">Deltacloud Community Call #19</a>
 
 <ul>
 <li>bundle/gem install/ locking gem versions... discussion and solution</li>
@@ -133,8 +153,8 @@
 <li>Questions/discussion - onapp driver request for help - http://onapp.com/cloud/technology/api/ </li>
 </ul>
 
-<p><br>
-<a href="http://youtu.be/NHUS-mzkd00">Deltacloud Community Call #18</a></p>
+<br>
+<a href="http://youtu.be/NHUS-mzkd00">Deltacloud Community Call #18</a>
 
 <ul>
 <li>New github pull request model - discussion</li>
@@ -142,23 +162,23 @@
 <li>Question - how to contribute to the appoxy/aws rubygem (used by Deltacloud EC2 driver)</li>
 </ul>
 
-<p><br>
-<a href="http://youtu.be/upKJM-eYeqw">Deltacloud Community Call #17</a></p>
+<br>
+<a href="http://youtu.be/upKJM-eYeqw">Deltacloud Community Call #17</a>
 
 <ul>
 <li>Progress update and discussion around the Deltacloud Networks API</li>
 </ul>
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=_2j6v4qwfzM">Deltacloud Community Call #16</a></p>
+<br>
+<a href="http://www.youtube.com/watch?v=_2j6v4qwfzM">Deltacloud Community Call #16</a>
 
 <ul>
 <li>Released 1.1.2</li>
 <li>A high level overview of: "Complete rewrite of deltacloud-client"</li>
 </ul>
 
-<p><br>
-<a href="http://youtu.be/e6AAJXSxR1U">Deltacloud Community Call #15</a></p>
+<br>
+<a href="http://youtu.be/e6AAJXSxR1U">Deltacloud Community Call #15</a>
 
 <ul>
 <li>Awesome features of the new deltacloud-client</li>
@@ -166,72 +186,75 @@
 <li>Validate Contributions Using the White Box Tests</li>
 </ul>
 
-<p><br>
-<a href="http://youtu.be/89bu_Rf_t9Y">Deltacloud Community Call #14</a></p>
+<br>
+<a href="http://youtu.be/89bu_Rf_t9Y">Deltacloud Community Call #14</a>
 
-<p>Using the Create models in CIMI, Split CIMI models to Model/Service, deltacloud-client revamp <br>
-Notes@<a href="http://etherpad.deltacloud.org/p/Weekly">http://etherpad.deltacloud.org/p/Weekly</a></p>
+Using the Create models in CIMI, Split CIMI models to Model/Service, deltacloud-client revamp <br>
+Notes@<a href="http://etherpad.deltacloud.org/p/Weekly">http://etherpad.deltacloud.org/p/Weekly</a>
 
-<p><br>
-<a href="http://youtu.be/74KvoLUOmYw">Deltacloud Community Call #13</a></p>
+<br>
+<a href="http://youtu.be/74KvoLUOmYw">Deltacloud Community Call #13</a>
 
-<p>Regions support in the Deltacloud Openstack driver.</p>
+Regions support in the Deltacloud Openstack driver.
 
-<p><br>
-<a href="http://youtu.be/zTCGRDO_3dU">Deltacloud Community Call #12</a></p>
+<br>
+<a href="http://youtu.be/zTCGRDO_3dU">Deltacloud Community Call #12</a>
 
-<p>Working with patches revisited - basics of rebasing and how to contribute via patch review.
-The ‘white box’ unit tests revisited - updating vcr fixtures</p>
+Working with patches revisited - basics of rebasing and how to contribute via patch review.
+The 'white box' unit tests revisited - updating vcr fixtures
 
-<p><br>
-<a href="http://youtu.be/HQ5aPdRSLHo">Deltacloud Community Call #11</a></p>
+<br>
+<a href="http://youtu.be/HQ5aPdRSLHo">Deltacloud Community Call #11</a>
 
-<p>An introduction/overview of sinatra-rabbit</p>
+An introduction/overview of sinatra-rabbit
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=HzRbBA8BJ-Q">Deltacloud Community Call #10</a></p>
+<br>
+<a href="http://www.youtube.com/watch?v=HzRbBA8BJ-Q">Deltacloud Community Call #10</a>
 
-<p>How to use Deltacloud driver “features”</p>
+How to use Deltacloud driver "features"
 
-<p><br>
-<a href="http://youtu.be/XWSG2knVvZI">Deltacloud Community Call #9</a></p>
+<br>
+<a href="http://youtu.be/XWSG2knVvZI">Deltacloud Community Call #9</a>
 
-<p>Demo of how to use CIMI $select and $expand parameters - Introduction/overview of a deltacloud driver</p>
+Demo of how to use CIMI $select and $expand parameters - Introduction/overview of a deltacloud driver
 
-<p><br>
-<a href="http://youtu.be/KvN0xEVc_N0">Deltacloud Community Call #8</a></p>
+<br>
+<a href="http://youtu.be/KvN0xEVc_N0">Deltacloud Community Call #8</a>
 
-<p>Deep dive into a Deltacloud API call, a look at the Deltacloud server gemspec - gems used as clients to cloud providers</p>
+Deep dive into a Deltacloud API call, a look at the Deltacloud server gemspec - gems used as clients to cloud providers
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=YbAsWrj6UEY">Deltacloud Community Call #7</a></p>
+<br>
+<a href="http://www.youtube.com/watch?v=YbAsWrj6UEY">Deltacloud Community Call #7</a>
 
-<p>The Deltacloud website - how it works, how to submit changes etc  -  Deltacloud exceptions and error handling introduction, how to catch provider errors and raise specific HTTP response codes.</p>
+The Deltacloud website - how it works, how to submit changes etc  -  Deltacloud exceptions and error handling introduction, how to catch provider errors and raise specific HTTP response codes.
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=oP__wuCqFxQ">Deltacloud Community Call #5</a></p>
+<br>
+<a href="http://www.youtube.com/watch?v=oP__wuCqFxQ">Deltacloud Community Call #5</a>
 
-<p>How to file bug reports for Deltacloud - process, what to report, following up and CIMI resourceMetadata (implementation, why it is important?) - testing scenarios.</p>
+How to file bug reports for Deltacloud - process, what to report, following up and CIMI resourceMetadata (implementation, why it is important?) - testing scenarios.
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=TGYTrVRxcGE">Deltacloud Community Call #4</a></p>
+<br>
+<a href="http://www.youtube.com/watch?v=TGYTrVRxcGE">Deltacloud Community Call #4</a>
 
-<p>Debugging deltacloud - how to chase a bug - common steps, debugging tools. Mailing list questions: i) ovirt and the User Level API, ii) Plans for CIMI back-end driver?</p>
+Debugging deltacloud - how to chase a bug - common steps, debugging tools. Mailing list questions: i) ovirt and the User Level API, ii) Plans for CIMI back-end driver?
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=YOMK8jrhGoo">Deltacloud Community Call #3</a></p>
+<br>
+<a href="http://www.youtube.com/watch?v=YOMK8jrhGoo">Deltacloud Community Call #3</a>
 
-<p>Adding state to Deltacloud for the CIMI frontend - Datamapper</p>
+Adding state to Deltacloud for the CIMI frontend - Datamapper
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=CMf73mtsIfs">Deltacloud Community Call #2</a></p>
+<br>
+<a href="http://www.youtube.com/watch?v=CMf73mtsIfs">Deltacloud Community Call #2</a>
 
-<p>Networking API discussion, Writing Deltacloud API tests</p>
+Networking API discussion, Writing Deltacloud API tests
 
-<p><br>
-<a href="http://www.youtube.com/watch?v=cUC96SdQjaE">Deltacloud Community Call #1</a></p>
+<br>
+<a href="http://www.youtube.com/watch?v=cUC96SdQjaE">Deltacloud Community Call #1</a>
 
-<p>Working with Deltacloud API clients, Contributing patches, review process, etc</p>
+Working with Deltacloud API clients, Contributing patches, review process, etc
+</distro>
+</li>
+</ul>
 
 
       <footer class="footer">
