Site: Add description of git pull request workflow

--- a/site/output/how-to-contribute.html
+++ b/site/output/how-to-contribute.html
@@ -103,10 +103,13 @@
 <h4 id="how">How can I contribute?</h4>
 
 <ul class="nav nav-list">
-  <li class="nav-header">
+<li class="nav-header">
   </li>
 <li>
-    <a href="send-patch.html">Send a patch</a>
+    <a href="send-pull-request.html">Send a pull request (preferred)</a>
+  </li>
+  <li>
+    <a href="send-patch.html">Send a patch (deprecated)</a>
   </li>
   <li>
     <a href="write-new-driver.html">Write a provider driver</a>
@@ -123,9 +126,7 @@
   <li>
     <a href="white-box-tests.html">Validate contributions using the white box tests</a>
   </li>
-</ul>
-
-<p><br></p>
+</ul><p><br></p>
 
 <h3>Overview of the Deltacloud directory structure</h3>
 
@@ -184,7 +185,6 @@ deltacloud
 
 <h3 id="documentation">Writing documentation</h3>
 <p>You can also contribute with a piece of documentation. There are still things which needs to be described. If you found one like that and you are interested in writing a couple of sentences about the particular issue, please, don’t hesitate to do it and <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">send us</a> your contribution. We really appreciate your help.</p>
-
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
