--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -123,6 +123,16 @@
 <h3>Past Calls:</h3>
 
 <p><br>
+<a href="http://youtu.be/TWf0o8n16uk">Deltacloud Community Call #21</a></p>
+
+<ul>
+<li>News: <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/201305.mbox/%3C518D0F79.4000901%40redhat.com%3E">Red Hat Announcement</a> </li>
+<li> OpenStack driver update: changing from <a href="https://github.com/ruby-openstack/ruby-openstack">ruby-openstack</a> to <a href="https://github.com/fog/fog">fog</a>
+</li>
+
+</ul>
+
+<p><br>
 <a href="http://youtu.be/cPnAiFc4wh4">Deltacloud Community Call #20</a></p>
 
 <ul>
