Attic banner added to the top of all html files

--- a/site/output/assets/img/documentation.html
+++ b/site/output/assets/img/documentation.html
@@ -10,7 +10,7 @@
     <link href="documentation_files/default.css" rel="StyleSheet" title="Main style" type="text/css">
     <link href="documentation_files/default-debug.css" rel="Alternate StyleSheet" title="Debug main style" type="text/css">
   </head>
-  <body>
+  <body><div style="background: red"><h1>2015/07/20 - Apache Deltacloud has been retired. </h1><h2>For more information, please explore the <a href="http://attic.apache.org/">Attic</a>. </h2></div>
     <div id="header">
       <div class="container">
         <div id="headerLogo" onclick="location.href='index.html';" style="cursor: pointer;">
