--- a/site/output/join-deltacloud/index.html
+++ b/site/output/join-deltacloud/index.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="/assets/img/favicon.ico">
   </head>
 
-  <body>
+  <body><div style="background: red"><h1>2015/07/20 - Apache Deltacloud has been retired. </h1><h2>For more information, please explore the <a href="http://attic.apache.org/">Attic</a>. </h2></div>
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
